books/sqlite/examples/conditional-create.out
Parse error near line 6: table counters already exists
  CREATE TABLE counters (     name TEXT UNIQUE NOT NULL,     number INTEGER NOT 
               ^--- error here
CREATE TABLE counters (
    name TEXT UNIQUE NOT NULL,
    number INTEGER NOT NULL
);
